tests/exposure_test_with_multiple_policies_1/netpols.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-1
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app: a-app
  ingress:
  - from:
    - namespaceSelector:
           matchExpressions:
           - key: env
             operator: In
             values:
             - env-1
             - env-2
           - key: tier
             operator: Exists
    ports:
    - port: 8050
      protocol: TCP
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: np-2
  namespace: hello-world
spec:
  podSelector:
    matchLabels:
      app: a-app
  ingress:
  - from:
    - namespaceSelector:
           matchExpressions:
           - key: tier
             operator: Exists
           - key: env
             operator: In
             values:
             - env-2
             - env-1
  policyTypes:
  - Ingress
  - Egress # deny egress
